--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,9 @@ machine:
     version: oraclejdk8
   environment:
     ANDROID_HOME: /usr/local/android-sdk-linux
+dependencies:
+  pre:
+    echo y | android update sdk --no-ui --all --filter "build-tools-25.0.2"
 test:
   override:
     - ./gradlew assembleDebug
