--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ machine:
     ANDROID_HOME: /usr/local/android-sdk-linux
 dependencies:
   pre:
-    echo y | android update sdk --no-ui --all --filter "build-tools-25.0.2"
+    echo y | android update sdk --no-ui --all --filter build-tools-25.0.2
 test:
   override:
     - ./gradlew assembleDebug
