--- a/circle.yml
+++ b/circle.yml
@@ -7,8 +7,8 @@ machine:
   environment:
     ANDROID_HOME: /usr/local/android-sdk-linux
 dependencies:
-  pre:
-    echo y | android update sdk --no-ui --all --filter build-tools-25.0.2
+  override:
+    echo y | android update sdk --no-ui --all --filter "build-tools-25.0.2"
 test:
   override:
     - ./gradlew assembleDebug
