--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,8 @@ dependencies:
   override:
     - echo y | android update sdk --no-ui --all --filter "build-tools-25.0.2"
 test:
+  pre:
+    - ./license_copy.sh
   override:
     - ./gradlew assembleDebug
     - cp -r project-name/build/outputs $CIRCLE_ARTIFACTS
