--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ test:
     - cp -r app/build/outputs $CIRCLE_ARTIFACTS
 deployment:
   master:
-    branch: master
+    branch: feature-SupportDeployGate
     commands:
       - curl -F "token=${DEPLOYGATE_API_KEY}" -F "file=@${CIRCLE_ARTIFACTS}/apk/app-debug.apk" -F "message=deployed" https://deploygate.com/api/users/subaru44k/apps
 
