--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,19 @@ android {
     dataBinding {
         enabled = true
     }
+    signingConfigs {
+        release {
+            storeFile rootProject.file('ci/signed_key.jks')
+            storePassword System.getenv("KEYSTORE_PASS")
+            keyAlias System.getenv("ALIAS_NAME")
+            keyPassword System.getenv("ALIAS_PASS")
+        }
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
 }
 
 dependencies {
